--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,21 +32,21 @@ jobs:
         if: matrix.goos == 'linux'
         run: |
           mkdir -p myapp/DEBIAN
-          echo "Package: change-case
-Version: ${GITHUB_REF_NAME}
-Architecture: amd64
-Maintainer: You <labs@dksengine.com>
-Description: CLI to change case" > myapp/DEBIAN/control
+          echo "Package: change-case" > myapp/DEBIAN/control
+          echo "Version: ${GITHUB_REF_NAME}" >> myapp/DEBIAN/control
+          echo "Architecture: amd64" >> myapp/DEBIAN/control
+          echo "Maintainer: You <labs@dksengine.com>" >> myapp/DEBIAN/control
+          echo "Description: CLI to change case" >> myapp/DEBIAN/control
           mkdir -p myapp/usr/local/bin
           cp dist/change_case_linux myapp/usr/local/bin/change_case
           dpkg-deb --build myapp
           mv myapp.deb dist/change_case_linux.deb
 
-          name: Upload artifact
-          uses: actions/upload-artifact@v4
-          with:
-            name: dist-${{ matrix.goos }}
-            path: dist/*
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: dist-${{ matrix.goos }}
+          path: dist/*
 
   release:
     runs-on: ubuntu-latest
