--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -63,13 +63,14 @@ jobs:
           fpm -s dir -t pacman -n cassie -v $VERSION --prefix /usr/local myapp/usr/local/bin/cassie
           mv cassie-$VERSION-1-x86_64.pkg.tar.zst dist/cassie_arch.pkg.tar.zst
 
-      - name: Create Windows binary package (only on Windows)
+      # Create Windows .exe binary (only on Windows)
+      - name: Create Windows .exe binary (only on Windows)
         if: matrix.goos == 'windows'
         run: |
           mkdir -p dist
-          cp dist/cassie_windows.exe dist/cassie_windows.zip
-          zip -r dist/cassie_windows.zip dist/cassie_windows.exe
+          GOOS=windows GOARCH=amd64 go build -o dist/cassie_windows.exe main.go
 
+      # Create macOS binary package (only on macOS)
       - name: Create macOS binary package (only on macOS)
         if: matrix.goos == 'macos'
         run: |
@@ -97,4 +98,3 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           files: dist/**/*
-
