--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,7 +41,7 @@ jobs:
           mkdir -p myapp/DEBIAN
           cat <<EOF > myapp/DEBIAN/control
           Package: change-case
-          Version: ${{ github.ref_name }}
+          Version: ${GITHUB_REF_NAME}
           Architecture: amd64
           Maintainer: You <labs@dksengine.com>
           Description: CLI to change case
