--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,6 +53,9 @@ jobs:
           dpkg-deb --build myapp
           mv myapp.deb dist/change_case_linux.deb
 
+      - name: Check dist contents
+        run: ls -l dist/
+
   release:
     runs-on: ubuntu-latest
     needs: build
@@ -64,7 +67,7 @@ jobs:
       - name: Upload release
         uses: softprops/action-gh-release@v1
         with:
-          files: dist/**/*
+          files: dist/*
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
