--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,21 +53,36 @@ jobs:
           dpkg-deb --build myapp
           mv myapp.deb dist/change_case_linux.deb
 
-      - name: Check dist contents
-        run: ls -l dist/
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: dist-${{ matrix.goos }}
+          path: dist/*
+
 
   release:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - uses: actions/download-artifact@v4
+      - name: Download Linux artifact
+        uses: actions/download-artifact@v4
         with:
-          path: dist
+          name: dist-linux
+          path: dist/linux
+
+      - name: Download Windows artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: dist-windows
+          path: dist/windows
+
+      - name: List files (debug)
+        run: ls -R dist/
 
       - name: Upload release
         uses: softprops/action-gh-release@v1
         with:
-          files: dist/*
+          files: dist/**/*
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
